crates/whiphand-tui/tests/snapshots/snapshots__runs_ongoing_80x24.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Runs  (experimental)                                "
"┌ Ongoing runs, every workspace ───────────────────────────────────────────────┐"
"│Workspace      Workflow     Run       Status              Step         Elapsed│"
"│shop           feature      20261010- running · waiting   plan         5m 0s  │"
"│api            develop      20261010- running · foreign                1h 4m  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" / filter  ·  o ongoing runs in every workspace  ·  ? help  ·  q back           "
