crates/whiphand-tui/tests/snapshots/snapshots__workspaces_80x24.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Workspaces  (experimental)                          "
"┌ Workspaces ──────────────────────────────────────────────────────────────────┐"
"│     Path                                                           Opened    │"
"│  ★  /home/dev/api                                                  2026-10-02│"
"│●    /home/dev/shop                                                 2026-10-10│"
"│     /home/dev/blog                                                 2026-09-20│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" p pin or unpin  ·  ? help  ·  q back                                           "
