crates/whiphand-tui/tests/snapshots/snapshots__workspaces_empty_80x24.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  no workspace  · Workspaces  (experimental)                            "
"┌ Workspaces ──────────────────────────────────────────────────────────────────┐"
"│No recent workspaces. Start with `whiphand tui -C <folder>` in a folder that  │"
"│has .whiphand/ (`whiphand init` makes one).                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" p pin or unpin  ·  ? help  ·  q back                                           "
